--- a/3/atoms/buttons/buttons.html
+++ b/3/atoms/buttons/buttons.html
@@ -103,7 +103,7 @@
             <p>While buttons and links may use similar visual treatments, it is important that you use a link (or anchor element) for anytime clicking the element will navigate you to a different page. Buttons are for interaction in the current page, such as refreshing the content or submitting a form.</p>
             <h3>Placement<span class="anchor"><a href="atoms/buttons/buttons.html#placement"><span class="icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path d="M0 0h24v24H0z" stroke="none"/><path d="M10 14a3.5 3.5 0 0 0 5 0l4-4a3.5 3.5 0 0 0-5-5l-.5.5"/><path d="M14 10a3.5 3.5 0 0 0-5 0l-4 4a3.5 3.5 0 0 0 5 5l.5-.5"/></svg></span></a></span></h3>
             <p>There are two distinct patterns when it comes to button placement:</p>
-            <div class="row cards two">
+            <div class="row cards">
               <div class="card">
                 <figure>
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 366 226"><path d="M144 194H82a4 4 0 0 0-4 4v24a4 4 0 0 0 4 4h62a4 4 0 0 0 4-4v-24a4 4 0 0 0-4-4Zm2 28a2 2 0 0 1-2 2H82a2 2 0 0 1-2-2v-24a2 2 0 0 1 2-2h62a2 2 0 0 1 2 2Zm-76-24v24a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4v-24a4 4 0 0 1 4-4h62a4 4 0 0 1 4 4ZM0 112h366v16H0Zm0-32h366v16H0Zm0-32h366v16H0ZM366 0v32H0V0Z" style="fill:#eee"/><path d="M358 15.5v1h-.8l-3.2 2-4 2.5v-4.5H20a6 6 0 0 1-5.5 5.5v60a6 6 0 0 1 5.5 5.5h158V83l4 2.5 3.2 2h.8v1h-.8l-3.2 2-4 2.5v-4.5H20a6 6 0 0 1-5.5 5.5v51H19l-2.5 4-2 3.2V204a6 6 0 1 1-1 0v-51.8l-2-3.2-2.5-4h4.5V94a6 6 0 0 1 0-12V22a6 6 0 1 1 6.5-6.5h330V11l4 2.5 3.2 2Z" style="fill:#df3a32"/></svg>
@@ -130,11 +130,11 @@
             <h2>Style<span class="anchor"><a href="atoms/buttons/buttons.html#style"><span class="icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path d="M0 0h24v24H0z" stroke="none"/><path d="M10 14a3.5 3.5 0 0 0 5 0l4-4a3.5 3.5 0 0 0-5-5l-.5.5"/><path d="M14 10a3.5 3.5 0 0 0-5 0l-4 4a3.5 3.5 0 0 0 5 5l.5-.5"/></svg></span></a></span></h2>
             <p>Consistent button styles make it easier for a user to recognize areas to take action across an application.</p>
             <div class="row">
-              <div class="column span-7">
+              <div class="column span-6">
                 <h3>Typography<span class="anchor"><a href="atoms/buttons/buttons.html#typography"><span class="icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path d="M0 0h24v24H0z" stroke="none"/><path d="M10 14a3.5 3.5 0 0 0 5 0l4-4a3.5 3.5 0 0 0-5-5l-.5.5"/><path d="M14 10a3.5 3.5 0 0 0-5 0l-4 4a3.5 3.5 0 0 0 5 5l.5-.5"/></svg></span></a></span></h3>
                 <p>Use sentence case for buttons.</p>
               </div>
-              <div class="column span-5">
+              <div class="column span-6">
                 <figure>
                   <figcaption>html</figcaption>
 <pre><code>&lt;button type=&quot;button&quot;&gt;Reset your password&lt;/button&gt;</code></pre>
@@ -143,11 +143,11 @@
               </div>
             </div>
             <div class="row">
-              <div class="column span-7">
+              <div class="column span-6">
                 <h3>Color<span class="anchor"><a href="atoms/buttons/buttons.html#color"><span class="icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path d="M0 0h24v24H0z" stroke="none"/><path d="M10 14a3.5 3.5 0 0 0 5 0l4-4a3.5 3.5 0 0 0-5-5l-.5.5"/><path d="M14 10a3.5 3.5 0 0 0-5 0l-4 4a3.5 3.5 0 0 0 5 5l.5-.5"/></svg></span></a></span></h3>
                 <p>There are two color options for buttons: <code>$secondary</code> and <code>$primary</code>.</p>
               </div>
-              <div class="column span-5">
+              <div class="column span-6">
                 <figure>
                   <figcaption>html</figcaption>
 <pre><code>&lt;button type=&quot;button&quot; class=&quot;secondary&quot;&gt;Cancel&lt;/button&gt;</code></pre>
@@ -158,11 +158,11 @@
               </div>
             </div>
             <div class="row">
-              <div class="column span-7">
+              <div class="column span-6">
                 <h3>Icons<span class="anchor"><a href="atoms/buttons/buttons.html#icons"><span class="icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path d="M0 0h24v24H0z" stroke="none"/><path d="M10 14a3.5 3.5 0 0 0 5 0l4-4a3.5 3.5 0 0 0-5-5l-.5.5"/><path d="M14 10a3.5 3.5 0 0 0-5 0l-4 4a3.5 3.5 0 0 0 5 5l.5-.5"/></svg></span></a></span></h3>
                 <p>Icons can be placed to the left or right of the button text to decorate the call-to-action with a visual indicator.</p>
               </div>
-              <div class="column span-5">
+              <div class="column span-6">
                 <figure>
                   <figcaption>html</figcaption>
 <pre><code>&lt;button type=&quot;button&quot;&gt;Button&lt;span class=&quot;icon post&quot;&gt;&lt;svg&gt;&lt;/svg&gt;&lt;/span&gt;&lt;/button&gt;</code></pre>
@@ -172,11 +172,11 @@
               </div>
           </div>
             <div class="row">
-              <div class="column span-7">
+              <div class="column span-6">
                 <h3>Badges<span class="anchor"><a href="atoms/buttons/buttons.html#badges"><span class="icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path d="M0 0h24v24H0z" stroke="none"/><path d="M10 14a3.5 3.5 0 0 0 5 0l4-4a3.5 3.5 0 0 0-5-5l-.5.5"/><path d="M14 10a3.5 3.5 0 0 0-5 0l-4 4a3.5 3.5 0 0 0 5 5l.5-.5"/></svg></span></a></span></h3>
                 <p><a href="">Badges</a> can be used inside buttons to indicate a known number of items associated with an action.</p>
               </div>
-              <div class="column span-5">
+              <div class="column span-6">
                 <figure>
                   <figcaption>html</figcaption>
 <pre><code>&lt;button type=&quot;button&quot;&gt;Button&lt;span class=&quot;badge&quot;&gt;10&lt;/span&gt;&lt;/button&gt;</code></pre>
@@ -185,11 +185,11 @@
               </div>
             </div>
             <div class="row">
-              <div class="column span-7">
+              <div class="column span-6">
                 <h3>Size<span class="anchor"><a href="atoms/buttons/buttons.html#size"><span class="icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path d="M0 0h24v24H0z" stroke="none"/><path d="M10 14a3.5 3.5 0 0 0 5 0l4-4a3.5 3.5 0 0 0-5-5l-.5.5"/><path d="M14 10a3.5 3.5 0 0 0-5 0l-4 4a3.5 3.5 0 0 0 5 5l.5-.5"/></svg></span></a></span></h3>
                 <p>Add a <code>small</code> class to your button to create a small button.</p>
               </div>
-              <div class="column span-5">
+              <div class="column span-6">
                 <figure>
                   <figcaption>html</figcaption>
 <pre><code>&lt;button type=&quot;button&quot; class=&quot;small&quot;&gt;Button&lt;/button&gt;</code></pre>
@@ -198,11 +198,11 @@
               </div>
             </div>
             <div class="row">
-              <div class="column span-7">
+              <div class="column span-6">
                 <h3>Disabled<span class="anchor"><a href="atoms/buttons/buttons.html#disabled"><span class="icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path d="M0 0h24v24H0z" stroke="none"/><path d="M10 14a3.5 3.5 0 0 0 5 0l4-4a3.5 3.5 0 0 0-5-5l-.5.5"/><path d="M14 10a3.5 3.5 0 0 0-5 0l-4 4a3.5 3.5 0 0 0 5 5l.5-.5"/></svg></span></a></span></h3>
                 <p>Buttons may be <code>disabled</code> to indicate to a user that the call-to-action is not-allowed.</p>
               </div>
-              <div class="column span-5">
+              <div class="column span-6">
                 <figure>
                   <figcaption>html</figcaption>
 <pre><code>&lt;button type=&quot;button&quot; disabled&gt;Button&lt;/button&gt;</code></pre>
